# stock-portfolio-app

./: .gitignore  LICENSE  README.md  app.py  create_db.py  example.db  migrations.py  my_stocks.db  pyproject.toml  resources_rc.py  setup.py  test.py
.github/workflows/: python-publish.yml
actions/: __init__.py  base.py  stock_actions.py  stock_refresh.py
entities/: __init__.py  classes.py
models/: __init__.py  controller.py  model.py  model_utils.py
mystocks/: app.py
mystocks/actions/: base.py  stock_actions.py
mystocks/db/: __init__.py  migrations.py
mystocks/entities/: __init__.py
mystocks/models/: __init__.py  controller.py  model.py
mystocks/slots/: __init__.py  receivers.py
mystocks/themes/: __init__.py  colors.py
mystocks/ui/: interface.ui
mystocks/utils/: __init__.py  get_price.py  helpers.py  validators.py
mystocks/views/: __init__.py  table.py
mystocks/widgets/: messages.py  spinner.py
mystocks/windows/: add_stock.py  main.py  settings_page.py  stock_page.py  ui_add_stock_dialog.py  ui_interface.py
settings/: __init__.py
slots/: receivers.py
stocks/: app.py
stocks/actions/: base.py  stock_actions.py
styles/: main.qss
themes/: __init__.py  colors.py  dark.py
ui/: add_stock_dialog.ui  add_stock_dialog_ui.py  interface.ui  interface_ui.py
utils/: __init__.py  get_price.py  helpers.py  logging.py  validators.py
views/: __init__.py  spinner.py  table.py
widgets/: spinner.py
windows/: __init__.py  add_stock.py  main.py  messages.py  settings_page.py  stock.py  stock_page.py  ui_add_stock_dialog.py  ui_interface.py
(+26 files in other folders)
