[tool.poetry]
name = "mystocks"
version = "0.1.0"
description = "This is a simple PySide6 application that allows users to keep track of the stocks they own and their performance."
authors = ["Avinash <avistylein3105@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Avinash-Raj/stock-portfolio-app"
keywords = ["python", "pyside6", "finance", "GUI", "stocks", "pyqt6"]

[tool.poetry.dependencies]
python = "~3.11"
PySide6 = "6.5.0"
PySide6-Addons = "6.5.0"
PySide6-Essentials = "6.5.0"
QT-PyQt-PySide-Custom-Widgets = "0.6.4"
yfinance = "^0.2.18"
CurrencyConverter = "^0.17.7"
simplejson = "^3.19.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pylint = "^2.17.3"

[tool.poetry.scripts]
run_migrations = "mystocks.db.migrations:main"
mystocks = "mystocks.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
exclude = ["*.db"]